[tool.poetry]
name = "npm-influx-exporter"
version = "0.0.1"
description = "Export Nginx Proxy Manager logs to Influxdb"
authors = ["Sheya Bernstein <sheya@sheyabernstein.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "npm_influx_exporter"}]


[tool.poetry.dependencies]
python = "^3.10"
geoip2 = "^4.7.0"
pydantic = "^2.5.1"
pydantic-settings = "^2.1.0"
requests = "^2.31.0"
influxdb-client = "^1.38.0"
cachetools = "^5.3.2"


[tool.poetry.group.dev.dependencies]
ruff = "^0.1.6"
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
pytest-env = "^1.1.1"
pre-commit = "^3.5.0"
black = "^23.11.0"


[tool.black]
line-length = 100


[tool.pytest.ini_options]
addopts = "--cov=npm_influx_exporter --cov-report term-missing"
env = [
    "DEBUG = 1",
    "INFLUX_URL = http://localhost:8086",
    "INFLUX_ORG = org",
    "INFLUX_BUCKET = bucket",
    "INFLUX_TOKEN = super-secret-token",
]
pythonpath = ["npm_influx_exporter"]
testpaths = ["tests"]


[tool.ruff]
line-length = 100
select = ["F", "E", "W", "Q", "I001"]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
